dfir_rs/tests/snapshots/surface_python__python_basic@graphvis_dot.snap
---
source: dfir_rs/tests/surface_python.rs
expression: "hf.meta_graph().unwrap().to_dot(& Default :: default())"
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) source_iter(0..10)", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) map(|x| (x,))", shape=invhouse, fillcolor="#88aaff"]
    n3v1 [label="(n3v1) py_udf(\l    \"\ldef fib(n):\lif n < 2:\l    return n\lelse:\l    return fib(n - 2) + fib(n - 1)\l\",\l    \"fib\",\l)\l", shape=invhouse, fillcolor="#88aaff"]
    n4v1 [label="(n4v1) map(|x: PyResult<Py<PyAny>>| Python::with_gil(|py| {\l    usize::extract(x.unwrap().as_ref(py)).unwrap()\l}))\l", shape=invhouse, fillcolor="#88aaff"]
    n5v1 [label="(n5v1) assert_eq([0, 1, 1, 2, 3, 5, 8, 13, 21, 34])", shape=house, fillcolor="#ffff88"]
    n4v1 -> n5v1
    n3v1 -> n4v1
    n2v1 -> n3v1
    n1v1 -> n2v1
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n1v1
        n2v1
        n3v1
        n4v1
        n5v1
    }
}
